# tiptop

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  LICENSE  README.md  pixi.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
docs/: Makefile  adding-new-embodiment.md  command-reference.md  conf.py  contributing.md  evaluation.md  getting-started.md  index.md  installation.md  limitations.md  requirements.txt  simulation.md  troubleshooting.md
docs/_static/: custom.css
install/: install-curobo.sh  install-cutamp.sh  install-zed.sh
tests/: conftest.py  test_tiptop_h5.py
tiptop/: __init__.py  execute_plan.py  motion_planning.py  perception_wrapper.py  planning.py  recording.py  tiptop_h5.py  tiptop_offline.py  tiptop_run.py  tiptop_websocket_server.py  utils.py  viz_utils.py  workspace.py
tiptop/config/: __init__.py  tiptop.yml
tiptop/config/assets/: calibration_info.json
tiptop/perception/: foundation_stereo.py  gemini.py  m2t2.py  sam2.py  segmentation.py  utils.py  visualization.py
tiptop/perception/cameras/: __init__.py  frame.py  rs_camera.py  zed_camera.py
tiptop/perception/prompts/: detect_and_translate.txt
tiptop/scripts/: analyze_results.py  calibrate_wrist_cam.py  check_fk.py  compute_gripper_mask.py  foundation_stereo_demo.py  get_observation.py  go_to_conf.py  gripper_actuate.py  paint_gripper_mask.py  perception_demo.py  sam_server.py  tiptop_config.py  viz_calibration.py  viz_gripper_cam.py  viz_scene.py  viz_tiptop_outputs.py  viz_tiptop_run.py
tiptop/ur5/: robotiq_gripper.py  ur5_client.py
